# Bargeddie_deploy_functions

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: code-quality.yaml  deploy-functions.yaml  deploy-pr.yaml
Bargeddie_Average_filter/: function_config.yaml  handler.py  requirements.txt
Bargeddie_Average_filter/schedules/: prod.yaml
Bargeddie_Estops/: function_config.yaml  handler.py
Bargeddie_Estops/schedules/: prod.yaml
Bargeddie_Line_status/: function_config.yaml  handler.py
Bargeddie_Line_status/schedules/: prod.yaml
Bargeddie_RefreshStaleData/: handler.py
Bargeddie_RefreshStaleData/schedules/: prod.yaml
Bargeddie_Uptime_Calculation_per_line/: handler.py
Bargeddie_Uptime_Calculation_per_line/schedules/: prod.yaml
Bargeddie_amcs_data/: handler.py
Bargeddie_amcs_data/schedules/: prod.yaml
Bargeddie_bale_counter/: function_config.yaml  handler.py
Bargeddie_bale_counter/schedules/: prod.yaml
Waste_model/: handler.py  requirements.txt
example_function1/: function_config.yaml  handler.py
example_function1/schedules/: prod.yaml
