[tool.poetry]
name = "deploy-functions-oidc-template"
version = "1.8.0"
description = "Cognite Functions template for OIDC projects"
authors = ["Håkon Treider <hakon.treider@cognite.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest-custom-exit-code = ">=0.3"
cognite-sdk = ">=7"
scipy-stubs = "^1.16.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pre-commit = ">=3"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
lines_after_imports = 2
lines_between_types = 1
line_length = 120
known_third_party = ["cognite","pytest"]

[tool.black]
line-length = 120
